[package]
name = "axum-nest-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
axum = "0.5.15"
http = "0.2.8"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
